--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>我的音乐播放器</title>
     <link rel="stylesheet" href="css/common.css" type="text/css">
     <link rel="stylesheet" href="css/Mycss.css" type="text/css">
-    <!--<link rel="stylesheet" href="css/阿里图标/iconfont.css" type="text/css">-->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_448544_98aeh1spi6pc766r.css" type="text/css">
+    <link rel="stylesheet" href="css/icon/iconfont.css" type="text/css">
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_448544_98aeh1spi6pc766r.css" type="text/css"> -->
     <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body onselectstart="return false">
