--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <div class="w-c-bottom">
                     <ul class="musicList">
                     </ul>
+                    <div class="w-c-gdtiao">
+                        <div class="w-c-gdbar"></div>
+                    </div>
                 </div>
             </div>
             <div class="w-right fr">
